--- a/components/login/login.component.html
+++ b/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div id="login-component">
 
     <div class="form-signin">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 fw-normal">Sign In</h1>
 
         <div id="username-container" class="form-floating">
             <input type="text" class="form-control" id="login-form-username" placeholder="Username">
