--- a/components/login/login.component.html
+++ b/components/login/login.component.html
@@ -13,10 +13,11 @@
             <label for="login-form-password">Password</label>
         </div>
 
-        <div id="remember-me-container" class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
+        <div id="type-container" class="checkbox mb-3">
+            <input type="radio" id="student-checkbox" name="account-type" checked>
+            <label for="student-checkbox">Student</label>
+            <input type="radio" id="faculty-checkbox" name="account-type">
+            <label for="faculty-checkbox">Faculty</label>
         </div>
 
         <button id="login-form-button" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
