--- a/components/register/register.component.html
+++ b/components/register/register.component.html
@@ -3,47 +3,79 @@
     <div class="form-register">
         <h1 class="h3 mb-3 fw-normal">Registration</h1>
 
-        <div id="firstname-container" class="form-floating">
-            <input type="text" class="form-control" id="register-form-firstname" placeholder="First name">
-            <label for="register-form-firstname">First name</label>
+        <div id="account-form" class="mb-3">
+            <p>What type of account are you reigstering for?</p>
+
+            <input type="radio" id="account-form-student-checkbox" name="account-type" checked>
+            <label for="student-checkbox">Student</label>
+            <br>
+            <input type="radio" id="account-form-faculty-checkbox" name="account-type">
+            <label for="faculty-checkbox">Faculty</label>
+
+            <button id="account-form-button" class="w-100 btn btn-lg btn-primary mt-3" type="submit">Continue</button>
         </div>
 
-        <div id="lastname-container" class="form-floating">
-            <input type="text" class="form-control" id="register-form-lastname" placeholder="Last name">
-            <label for="register-form-lastname">Last name</label>
+        <div id="student-form" hidden>
+            <div id="major-container" class="form-floating">
+                <input type="text" class="form-control" id="student-form-major" placeholder="Major">
+                <label for="student-form-major">Major</label>
+
+                <button id="student-form-button" class="w-100 btn btn-lg btn-primary mt-3" type="submit">Continue</button>
+            </div>
         </div>
 
-        <div id="birthdate-container" class="form-floating">
-            <input type="date" class="form-control" id="register-form-dob" placeholder="Date of Birth">
-            <label for="register-form-dob">Date of Birth</label>
+        <div id="faculty-form" hidden>
+            <div id="salary-container" class="form-floating">
+                <input type="number" class="form-control" id="faculty-form-salary" placeholder="Salary">
+                <label for="faculty-form-salary">Salary</label>
+            </div>
+
+            <div id="department-container" class="form-floating">
+                <input type="text" class="form-control" id="faculty-form-department" placeholder="Department">
+                <label for="faculty-form-department">Department</label>
+            </div>
+
+            <button id="faculty-form-button" class="w-100 btn btn-lg btn-primary mt-3" type="submit">Continue</button>
         </div>
 
-        <div id="phone-container" class="form-floating">
-            <input type="tel" class="form-control" id="register-form-phone" placeholder="Phone Number" minlength="10" maxlength="10" required>
-            <label for="register-form-phone">Phone Number</label>
-        </div>
+        <div id="register-form" hidden>
+            <div id="firstname-container" class="form-floating">
+                <input type="text" class="form-control" id="register-form-firstname" placeholder="First name">
+                <label for="register-form-firstname">First name</label>
+            </div>
 
-        <div id="username-container" class="form-floating">
-            <input type="text" class="form-control" id="register-form-username" placeholder="Username">
-            <label for="register-form-username">Username</label>
-        </div>
+            <div id="lastname-container" class="form-floating">
+                <input type="text" class="form-control" id="register-form-lastname" placeholder="Last name">
+                <label for="register-form-lastname">Last name</label>
+            </div>
 
-        <div id="email-container" class="form-floating">
-            <input type="email" class="form-control" id="register-form-email" placeholder="E-mail">
-            <label for="register-form-email">E-mail</label>
-        </div>
+            <div id="birthdate-container" class="form-floating">
+                <input type="date" class="form-control" id="register-form-dob" placeholder="Date of Birth">
+                <label for="register-form-dob">Date of Birth</label>
+            </div>
 
-        <div id="major-container" class="form-floating">
-            <input type="text" class="form-control" id="register-form-major" placeholder="Major">
-            <label for="register-form-major">Major</label>
-        </div>
+            <div id="phone-container" class="form-floating">
+                <input type="tel" class="form-control" id="register-form-phone" placeholder="Phone Number" minlength="10" maxlength="10" required>
+                <label for="register-form-phone">Phone Number</label>
+            </div>
 
-        <div id="password-container" class="form-floating">
-            <input type="password" class="form-control" id="register-form-password" placeholder="Password">
-            <label for="register-form-password">Password</label>
-        </div>
+            <div id="username-container" class="form-floating">
+                <input type="text" class="form-control" id="register-form-username" placeholder="Username">
+                <label for="register-form-username">Username</label>
+            </div>
 
-        <button id="register-form-button" class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
+            <div id="email-container" class="form-floating">
+                <input type="email" class="form-control" id="register-form-email" placeholder="E-mail">
+                <label for="register-form-email">E-mail</label>
+            </div>
+
+            <div id="password-container" class="form-floating">
+                <input type="password" class="form-control" id="register-form-password" placeholder="Password">
+                <label for="register-form-password">Password</label>
+            </div>
+
+            <button id="register-form-button" class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
+        </div>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
 
     </div>
