display courses in a table

--- a/components/dashboard/dashboard.component.html
+++ b/components/dashboard/dashboard.component.html
@@ -1,3 +1,13 @@
 <h1>Welcome, <span id="welcome-user"></span></h1>
 <button id="my-button">Click</button>
-<ul id="list"></ul>
+<table>
+    <thead>
+        <tr>
+            <th>Course Code</th>
+            <th>Course Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+        </tr>
+    </thead>
+    <tbody id="table-body"></tbody>
+</table>
