--- a/components/dashboard/dashboard.component.html
+++ b/components/dashboard/dashboard.component.html
@@ -1,13 +1,78 @@
+
 <h1>Welcome, <span id="welcome-user"></span></h1>
-<button id="my-button">Click</button>
-<table>
-    <thead>
-        <tr>
-            <th>Course Code</th>
-            <th>Course Name</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-        </tr>
-    </thead>
-    <tbody id="table-body"></tbody>
-</table>
+    <div class="container">
+        <div class="row" id="student-info">
+            <div class="col-sm">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Course Code</th>
+                    </tr>
+                    </thead>
+                    <tbody id="course-list"></tbody>
+                </table>
+            </div>
+            <div class="col-sm">
+                Jose Tejada<br>
+                DOB: 03/03/1995<br>
+                email@gmail<br>
+                Computer Science<br>
+                Student<br>
+            </div>
+        </div>
+        <div class="row" id="classes-manager">
+            <h2>Classes manager</h2>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Add Classes</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Drop Classes</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">View  All  classes offered</button>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+
+
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    Register for classes
+                </div>
+
+
+
+
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+
+
+                    Drop
+
+
+
+                </div>
+
+
+
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Course Name</th>
+                            <th>Course Code</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
+                        </tr>
+                        </thead>
+                        <tbody id="table-body"></tbody>
+                    </table>
+
+
+
+
+                </div>
+            </div>
+
+        </div>
+    </div>
