students can now see their own schedule

--- a/components/dashboard/dashboard.component.html
+++ b/components/dashboard/dashboard.component.html
@@ -6,8 +6,7 @@
                 <table>
                     <thead>
                     <tr>
-                        <th>Course Name</th>
-                        <th>Course Code</th>
+                        <th>My Courses:</th>
                     </tr>
                     </thead>
                     <tbody id="course-list"></tbody>
