--- a/components/dashboard/dashboard.component.html
+++ b/components/dashboard/dashboard.component.html
@@ -1,91 +1,82 @@
-<h1>Welcome, <span id="welcome-user"></span></h1>
-    <div class="container">
-        <div class="row" id="student-info">
-            <div class="col-sm">
-                <table>
-                    <thead>
+
+<div class="container">
+    <h1>Welcome, <span id="welcome-user"></span></h1>
+    <div class="row" id="student-info">
+        <div class="col-sm" id="student-courses">
+            <table>
+                <thead>
                     <tr>
                         <th>My Courses:</th>
                     </tr>
-                    </thead>
-                    <tbody id="course-list"></tbody>
-                </table>
-            </div>
-            <div class="col-sm">
-                Jose Tejada<br>
-                DOB: 03/03/1995<br>
-                email@gmail<br>
-                Computer Science<br>
-                Student<br>
-            </div>
+                </thead>
+                <tbody id="course-list"></tbody>
+            </table>
         </div>
-        <div class="row" id="classes-manager">
-            <h2>Classes manager</h2>
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="add-class-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Add Classes</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="drop-class-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Drop Classes</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="view-course-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">View  All  classes offered</button>
-                </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-
-
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Course Name</th>
-                            <th>Course Code</th>
-                            <th>Start Date</th>
-                            <th>End Date</th>
-                        </tr>
-                        </thead>
-                        <tbody id="add-table-body"></tbody>
-                    </table>
-                </div>
-
-
-
-
-                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Course Name</th>
-                            <th>Course Code</th>
-                            <th>Start Date</th>
-                            <th>End Date</th>
-                        </tr>
-                        </thead>
-                        <tbody id="drop-table-body"></tbody>
-                    </table>
-                </div>
-
-
-
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Course Name</th>
-                            <th>Course Code</th>
-                            <th>Start Date</th>
-                            <th>End Date</th>
-                        </tr>
-                        </thead>
-                        <tbody id="table-body"></tbody>
-                    </table>
-
-
-
-
-                </div>
-            </div>
-
+        <div class="col-sm">
+            Jose Tejada<br>
+            DOB: 03/03/1995<br>
+            email@gmail<br>
+            Computer Science<br>
+            Student<br>
         </div>
     </div>
+    <h1>Classes manager</h1>
+    <div class="row" id="classes-manager">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="add-class-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Add Classes</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="drop-class-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Drop Classes</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="view-course-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">View  All  classes offered</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Course Name</th>
+                            <th>Course Code</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="add-table-body"></tbody>
+                </table>
+            </div>
+
+            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Course Name</th>
+                            <th>Course Code</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="drop-table-body"></tbody>
+                </table>
+            </div>
+
+            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Course Name</th>
+                            <th>Course Code</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body"></tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+</div>
