fixed register button not navigating to register form

--- a/components/navbar/navbar.component.html
+++ b/components/navbar/navbar.component.html
@@ -8,13 +8,16 @@
         <div class="collapse navbar-collapse" id="navbar-collapsible">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a id="logout" class="nav-link" href="" hidden>Logout</a>
+                    <a id="home" class="nav-link" href="#" data-route="/dashboard">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a id="nav-to-login" class="nav-link" href="" data-route="/login">Login</a>
+                    <a id="logout" class="nav-link" href="#" hidden>Logout</a>
                 </li>
                 <li class="nav-item">
-                    <a id="nav-to-register" class="nav-link" href="" data-route="/register">Register</a>
+                    <a id="nav-to-login" class="nav-link" href="#" data-route="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a id="nav-to-register" class="nav-link" href="#" data-route="/register">Register</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
