--- a/components/dashboard/dashboard.component.html
+++ b/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
-<h1>Welcome, <span id="welcome-user"></span></h1>
     <div class="container">
+        <h1>Welcome, <span id="welcome-user"></span></h1>
         <div class="row" id="student-info">
-            <div class="col-sm">
+            <div class="col-sm" id="student-courses">
                 <table>
                     <thead>
                     <tr>
@@ -10,13 +10,6 @@
                     </thead>
                     <tbody id="course-list"></tbody>
                 </table>
-            </div>
-            <div class="col-sm">
-                Jose Tejada<br>
-                DOB: 03/03/1995<br>
-                email@gmail<br>
-                Computer Science<br>
-                Student<br>
             </div>
         </div>
         <div class="row" id="classes-manager">
