fixed a loop that continuously called getOpenCourses

--- a/components/facultyDashboard/facultyDashboard.component.html
+++ b/components/facultyDashboard/facultyDashboard.component.html
@@ -53,7 +53,7 @@
             <!--        ============END CREATE COURSE FORM=====================-->
 
 
-    <div class="accordion-item">
+    <div class="accordion-item" id="remove-course-container">
         <h2 class="accordion-header" id="flush-headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                 Remove a Course
