--- a/components/facultyDashboard/facultyDashboard.component.html
+++ b/components/facultyDashboard/facultyDashboard.component.html
@@ -103,7 +103,7 @@
 
 
 
-    <div class="accordion-item">
+    <div class="accordion-item" id="edit-course-container">
         <h2 class="accordion-header" id="flush-headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                Edit a course
