Changed button colors to dark

--- a/components/facultyDashboard/facultyDashboard.component.html
+++ b/components/facultyDashboard/facultyDashboard.component.html
@@ -114,8 +114,8 @@
 
 <!--==============================Start edit course ==============================================-->
                 <div class="container" id="delete-container">
-                    <div class="alert alert-danger" role="alert">
-                       Course attribute names are in bold. When updating a date, update to in (yyyy-mm-dd).
+                    <div class="alert alert-warning" role="alert">
+                       Course attribute names are in bold. When updating a date, update in a (yyyy-mm-dd) format.
                     </div>
                     <div class="row" id="row-container">
                         <div class="col-md" id="one">
