--- a/components/login/login.component.html
+++ b/components/login/login.component.html
@@ -20,7 +20,7 @@
             <label for="faculty-checkbox">Faculty</label>
         </div>
 
-        <button id="login-form-button" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button id="login-form-button" class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
 
     </div>
