--- a/components/register/register.component.html
+++ b/components/register/register.component.html
@@ -12,7 +12,7 @@
             <input type="radio" id="account-form-faculty-checkbox" name="account-type">
             <label for="faculty-checkbox">Faculty</label>
 
-            <button id="account-form-button" class="w-100 btn btn-lg btn-primary mt-3" type="submit">Continue</button>
+            <button id="account-form-button" class="w-100 btn btn-lg btn-dark mt-3" type="submit">Continue</button>
         </div>
 
         <div id="student-form" hidden>
@@ -20,7 +20,7 @@
                 <input type="text" class="form-control" id="student-form-major" placeholder="Major">
                 <label for="student-form-major">Major</label>
 
-                <button id="student-form-button" class="w-100 btn btn-lg btn-primary mt-3" type="submit">Continue</button>
+                <button id="student-form-button" class="w-100 btn btn-lg btn-dark mt-3" type="submit">Continue</button>
             </div>
         </div>
 
@@ -35,7 +35,7 @@
                 <label for="faculty-form-department">Department</label>
             </div>
 
-            <button id="faculty-form-button" class="w-100 btn btn-lg btn-primary mt-3" type="submit">Continue</button>
+            <button id="faculty-form-button" class="w-100 btn btn-lg btn-dark mt-3" type="submit">Continue</button>
         </div>
 
         <div id="register-form" hidden>
@@ -74,7 +74,7 @@
                 <label for="register-form-password">Password</label>
             </div>
 
-            <button id="register-form-button" class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
+            <button id="register-form-button" class="w-100 btn btn-lg btn-dark" type="submit">Sign Up</button>
         </div>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
 
